[package]
name = "dawnflame"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/dawnflame"

[lib]
path = "lib.rs"

[dependencies]
redb = { version = "1.4.0", features = ["logging"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
bytes = { version = "1", features = ["serde"] }
http-serde = "2"
bincode = "1.3.3"
bytestring =  { version = "1", features = ["serde"] }
data-encoding = "2"
serde_repr = "0.1"

ed25519-dalek = { version = "2", features = ["serde"] }
# pbkdf2 = "0.12"
# hmac = "0.12"
# sha2 = "0.10"

log = "0.4"

cshake = { git = "https://github.com/Berylsoft/keccak-state", features = ["std", "rand"] }
actor-core = { git = "https://github.com/Berylsoft/actor" }
