[package]
name = "dawnflame-server"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/dawnflame"

[[bin]]
name = "df"
path = "main.rs"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"

hyper = { version = "1", features = ["http1", "server", "client"] }
http-body-util = "0.1"

futures-lite = "2"
async-global-executor = "2"
async-net = "2"
async-channel = "2"
async-ctrlc = "1"
smol-hyper = "0.1"
actor = { git = "https://github.com/Berylsoft/actor" }

dawnflame = { path = "../core" }
