[package]
name = "dawnflame-server"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/dawnflame"

[[bin]]
name = "df"
path = "main.rs"

[dependencies]
env_logger = { version = "0.10", default-features = false }
log = "0.4"

hyper = { version = "1", features = ["http1", "server", "client"] }
http-body-util = "0.1"

futures-lite = "2"
async-global-executor = "2"
async-net = "2"
async-channel = "2"
async-ctrlc = "1"
# no need for executor and timer now
smol-hyper = { version = "0.1", default-features = false }
actor = { git = "https://github.com/Berylsoft/actor" }

dawnflame = { path = "../core" }
